# silent-grpc

./: Cargo.toml  LICENSE  README.md  build.rs
docs/: requirements.md
proto/: helloworld.proto
src/: client.rs  handler.rs  main.rs  service.rs
src/proto/: helloworld.rs  mod.rs
